# advent-of-code-explainer

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  _config.yml  devlog.md
pkg/: .buildinfo  .flake8  README.md  index.html  objects.inv  pyproject.toml  requirements-venv-frozen.txt  searchindex.js  setup.cfg  setup.py  tox.ini
pkg/.demo/: .gitignore  Makefile
pkg/.doctrees/: advent_of_code_explainer.doctree  advent_of_code_explainer.puzzles.doctree  advent_of_code_explainer.puzzles.year_2023.day_1.doctree  advent_of_code_explainer.puzzles.year_2023.day_2.doctree  advent_of_code_explainer.puzzles.year_2023.doctree  advent_of_code_explainer.puzzles.year_2024.day_1.doctree  advent_of_code_explainer.puzzles.year_2024.day_2.doctree  advent_of_code_explainer.puzzles.year_2024.doctree  environment.pickle  index.doctree  modules.doctree
pkg/_modules/: index.html
pkg/_sources/: advent_of_code_explainer.puzzles.year_2023.day_1.rst.txt  advent_of_code_explainer.puzzles.year_2023.day_2.rst.txt  advent_of_code_explainer.puzzles.year_2023.rst.txt  advent_of_code_explainer.puzzles.year_2024.day_2.rst.txt  advent_of_code_explainer.rst.txt  index.rst.txt  modules.rst.txt
pkg/advent_of_code_explainer.puzzles/: index.html
pkg/advent_of_code_explainer.puzzles.year_2023/: index.html
pkg/advent_of_code_explainer.puzzles.year_2023.day_1/: index.html
pkg/advent_of_code_explainer.puzzles.year_2023.day_2/: index.html
pkg/advent_of_code_explainer.puzzles.year_2024.day_1/: index.html
pkg/advent_of_code_explainer.puzzles.year_2024.day_2/: index.html
(+116 files in other folders)
