[metadata]
name = advent_of_code_explainer
author = Skenvy
author_email = nathan.a.z.levett@gmail.com
description = 'An "explainer" app for "Advent of Code" puzzles.'
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
url = https://github.com/Skenvy/advent-of-code-explainer
project_urls =
    Bug Tracker = https://github.com/Skenvy/advent-of-code-explainer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
keywords =
    Advent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
